# BeeWiSmartLiteWinCTRL

./: .gitignore  README.md  pyproject.toml  run_tray.py
.github/workflows/: release.yml
beewi/: __init__.py  cli.py  config.py  device.py  engine.py  protocol.py  tray.py
