[project]
name = "beewi-smartlite-winctrl"
version = "0.1.0"
description = "Control BeeWi SmartLite bulbs over Bluetooth LE from Windows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bleak>=0.21",
    "pyside6>=6.6",
]

[project.scripts]
beewi = "beewi.cli:main"
beewi-tray = "beewi.tray:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beewi"]
